# kraken-pnl-calculator

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: CODEOWNERS  pill_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: SECURITY  _build.yaml  cicd.yaml  dependabot_auto_merge.yaml
src/: main.rs
